style: fix background styles and add invisible scrollbar in Sidebar component

--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -1,8 +1,13 @@
 .sidebar {
     height: 100vh;
-    max-width: fit-content;
+    width: 100%;
+    max-width: 242px;
     padding-left: 1.875rem;
     padding-top: 20px;
+    background: var(--background-color);
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none;
 }
 
 .sidebar nav {
